Meatballs.html is done

--- a/recipes/Meatballs.html
+++ b/recipes/Meatballs.html
@@ -21,6 +21,7 @@
             <li><em>5tsp</em> Salt</li>
             <li><em>5tsp</em> Pepper</li>
             <li><em>2tbsp</em> Werchioshire</li>
+        </ul>
         <h2>Cooking steps:</h2>   
         <ol>
             <li><strong>Preheat the oven to 400 degrees</strong></li>   
@@ -32,6 +33,6 @@
         <h1>And we're done!</h1>
         <p>You are ready to enjoy your meatballs!</p>
 
-        </ul>
+    <a href="../index.html">Back to home</a>    
     </body>
 </html>
