Finished other recipe pages and added pictures along with links to lead back to home

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./Images/MainPic.jpg" alt="IYKYK"height=400 width="750">
         <ul>
         <li><a href="./recipes/Meatballs.html">Meatball recipe</a></li>
+        <li><a href="./recipes/RP.html">Radioactive Pancakes</a></li>
+        <li><a href="./recipes/SB.html">Sticky buns</a></li>
         </ul>
     </body>
 </html>
