--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-    <body>
+    <body class="main">
         <h1>Odin Recipes</h1>
-        <img src="./Images/MainPic.jpg" alt="IYKYK"height=400 width="750">
+        <img src="./Images/mainn.jpg_large" alt="IYKYK"height=400 width="750">
         <ul>
-        <li><a href="./recipes/Meatballs.html">Meatball recipe</a></li>
-        <li><a href="./recipes/RP.html">Radioactive Pancakes</a></li>
-        <li><a href="./recipes/SB.html">Sticky buns</a></li>
+        <button><li><a href="./recipes/Meatballs.html">Famous Meatballs</a></li></button>
+        <button><li><a href="./recipes/RP.html">Radioactive Pancakes</a></li></button>
+        <button><li><a href="./recipes/SB.html">Very Sticky Buns</a></li></button>
         </ul>
     </body>
 </html>
