--- a/recipes/Meatballs.html
+++ b/recipes/Meatballs.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mom's Meatballs</title>
+    <link rel = "stylesheet" href="../style.css">
 </head>
-    <body>
+    <body class="header">
         <h1>Meatballs</h1>
-        <img src="../Images/MBS.jpg" alt="Finished meatballs ready to serve!"height="350" width="700">
+        <img class="MB" src="../Images/MBS.jpg" alt="Finished meatballs ready to serve!">
         <p> This meatball recipe has been passed down for generations. Serve it with your spaghetti
             dish or eat them alone with some French. They're delicious either way!
         </p>
         <p>
             <strong>If time is a factor, don't worry.This recipe only takes 30 minutes from start to finish!</strong>
         </p>
+        <div class="ingred">
         <h2>Ingrediants:</h2>
         <ul>
             <li><em>16oz</em> ground beef</li>
@@ -22,6 +24,8 @@
             <li><em>5tsp</em> Pepper</li>
             <li><em>2tbsp</em> Werchioshire</li>
         </ul>
+        </div>
+        <div class="steps">
         <h2>Cooking steps:</h2>   
         <ol>
             <li><strong>Preheat the oven to 400 degrees</strong></li>   
@@ -29,10 +33,8 @@
             <li><strong>Once mixed, add werchioshire sauce and mix by hand.</strong></li> 
             <li><strong>Shape beef into balls (1 inch diameter), place in oven for 20 minutes.</strong></li>  
         </ol> 
-
+        </div>
         <h1>And we're done!</h1>
-        <p>You are ready to enjoy your meatballs!</p>
-
-    <a href="../index.html">Back to home</a>    
+    <button><a href="../index.html">Back to home</a></button>
     </body>
 </html>
