Little bug with landing page not being filled

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <h1>Odin Recipes</h1>
         <img src="./Images/mainn.jpg_large" alt="IYKYK"height=400 width="750">
         <ul>
-        <button><li><a href="./recipes/Meatballs.html">Famous Meatballs</a></li></button>
-        <button><li><a href="./recipes/RP.html">Radioactive Pancakes</a></li></button>
-        <button><li><a href="./recipes/SB.html">Very Sticky Buns</a></li></button>
+        <button class = "recipeBut"><li><a href="./recipes/Meatballs.html">Famous Meatballs</a></li></button>
+        <button class = "recipeBut"><li><a href="./recipes/RP.html">Radioactive Pancakes</a></li></button>
+        <button class = "recipeBut"><li><a href="./recipes/SB.html">Very Sticky Buns</a></li></button>
         </ul>
+        <a class="odinText"href="https://www.theodinproject.com/about" target="_blank">About Odin</a>
     </body>
 </html>
